--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -1,5 +1,6 @@
 <div class="hd logodiv">
-    <%- image_tag('img/logo.png',{class: 'logopng'}) %>
+    <!-- https://getavataaars.com/?accessoriesType=Prescription02&avatarStyle=Transparent&clotheColor=Gray01&clotheType=Hoodie&eyeType=Happy&eyebrowType=DefaultNatural&facialHairType=Blank&hairColor=Black&mouthType=Twinkle&skinColor=Pale&topType=ShortHairShortFlat -->
+    <%- image_tag('img/wei-avatar.svg',{class: 'logopng'}) %>
     <p class="logot"><span class="logo_1">&lt;</span><span class="logo_2">/</span><span class="logo_3">#</span> <%= theme.logo_title %> <span class="logo_3">#</span><span class="logo_2">/</span><span class="logo_1">&gt;</span></p>
 </div>
 <%- partial('_partial/nav') %>
